# onionai-frontend

./: .env.example  .gitignore  Dockerfile  README.nd  pyproject.toml
src/: main.py
src/components/: authentication.py  chat_interface.py  sidebar.py
src/services/: analytics.py  api_client.py  cognito.py
src/utils/: config.py  exceptions.py  logger.py  metrics.py  rate_limit.py  session.py
